--- a/Clipper/User Interface/Base.lproj/Main.storyboard
+++ b/Clipper/User Interface/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="r8b-Av-Ijw">
-    <device id="retina5_5" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="r8b-Av-Ijw">
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -41,7 +39,7 @@
                                 <rect key="frame" x="167" y="328" width="80" height="80"/>
                             </imageView>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="hybrid" translatesAutoresizingMaskIntoConstraints="NO" id="4St-8W-W8P">
-                                <rect key="frame" x="0.0" y="64" width="414" height="628"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="648"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -59,9 +57,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Clipper" id="ijt-5i-HRh">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="dVI-OW-C54">
+                        <barButtonItem key="rightBarButtonItem" systemItem="organize" id="dVI-OW-C54">
                             <connections>
-                                <action selector="prepareNewLocation:" destination="BYZ-38-t0r" id="0Hz-la-EFI"/>
+                                <action selector="prepareActions:" destination="BYZ-38-t0r" id="1gT-WT-OKH"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -69,8 +67,8 @@
                         <outlet property="addressLabel" destination="xDO-fH-XS7" id="gyl-tW-vkd"/>
                         <outlet property="aimImageView" destination="xCv-KC-Emb" id="EVD-Zz-JH4"/>
                         <outlet property="mapView" destination="4St-8W-W8P" id="wVn-R5-AJX"/>
-                        <segue destination="Eqp-fv-bfG" kind="presentation" identifier="showInput" modalPresentationStyle="overCurrentContext" id="ww2-fa-w0a"/>
-                        <segue destination="KYG-ie-Zo9" kind="show" identifier="showLocationInfo" id="gpu-Wn-p7p"/>
+                        <segue destination="KYG-ie-Zo9" kind="presentation" identifier="showLocationInfo" id="i6n-b4-yXy"/>
+                        <segue destination="Eqp-fv-bfG" kind="presentation" identifier="showInput" modalPresentationStyle="automatic" id="6n2-MF-nHJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -82,14 +80,14 @@
             <objects>
                 <tableViewController id="KYG-ie-Zo9" customClass="LocationInfoController" customModule="Clipper" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="4DF-qM-q0F">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <sections>
                             <tableViewSection id="rmL-QL-NWP">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="91" id="CeH-kD-7eF" userLabel="Greetings Cell">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="91"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="91"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="CeH-kD-7eF" id="cmI-zs-OMh">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="91"/>
@@ -112,7 +110,7 @@
                                         <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="105" id="v2k-Ve-5ts" userLabel="Pants Cell">
-                                        <rect key="frame" x="0.0" y="91" width="414" height="105"/>
+                                        <rect key="frame" x="0.0" y="119" width="414" height="105"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="v2k-Ve-5ts" id="2Oc-JA-Yed">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="105"/>
@@ -132,7 +130,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="105" id="LTJ-so-ZBb" userLabel="Shirt Cell">
-                                        <rect key="frame" x="0.0" y="196" width="414" height="105"/>
+                                        <rect key="frame" x="0.0" y="224" width="414" height="105"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LTJ-so-ZBb" id="AYc-gs-FWT">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="105"/>
@@ -152,7 +150,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="102" id="Icq-tT-jKm" userLabel="Command Cell">
-                                        <rect key="frame" x="0.0" y="301" width="414" height="102"/>
+                                        <rect key="frame" x="0.0" y="329" width="414" height="102"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Icq-tT-jKm" id="RtJ-3b-qVB">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="102"/>
@@ -177,7 +175,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="IZ7-zm-bUL" userLabel="Remove Cell">
-                                        <rect key="frame" x="0.0" y="403" width="414" height="44"/>
+                                        <rect key="frame" x="0.0" y="431" width="414" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IZ7-zm-bUL" id="u7T-KK-1PM">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
@@ -226,13 +224,13 @@
             <objects>
                 <viewController id="Eqp-fv-bfG" customClass="InputLocationController" customModule="Clipper" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="k0q-pH-Yva">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0KU-mH-4Aj">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="258"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghg-8r-q3x">
+                                    <button hidden="YES" opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghg-8r-q3x">
                                         <rect key="frame" x="370" y="28" width="32" height="32"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="32" id="1Np-L7-NLC"/>
@@ -257,7 +255,6 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="pNX-Ao-aRg"/>
                                         </constraints>
-                                        <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
@@ -282,7 +279,6 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="CI9-lB-c7z"/>
                                         </constraints>
-                                        <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
@@ -360,7 +356,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="r8b-Av-Ijw" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bPU-l9-L02">
-                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
